[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/UI/pause_menu.gd" type="Script" id=1]
[ext_resource path="res://assets/BWTheme.tres" type="Theme" id=2]
[ext_resource path="res://assets/ATARCE__.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/ARARCE__Med.tres" type="DynamicFont" id=4]

[sub_resource type="DynamicFont" id=1]
size = 56
outline_size = 20
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = -5
font_data = ExtResource( 3 )

[node name="PauseMenu" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -540.0
margin_top = -360.0
margin_right = 540.0
margin_bottom = 360.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="ReferenceRect" type="ReferenceRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -487.0
margin_top = -300.0
margin_right = 487.0
margin_bottom = 300.0
border_color = Color( 1, 1, 1, 1 )
border_width = 2.0
editor_only = false

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -155.5
margin_top = 48.0
margin_right = 155.5
margin_bottom = 104.0
custom_fonts/font = SubResource( 1 )
text = "Paused"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -127.5
margin_right = 200.0
margin_bottom = 127.5
custom_constants/separation = 30

[node name="BackButton" type="Button" parent="VBoxContainer"]
margin_right = 400.0
margin_bottom = 65.0
rect_min_size = Vector2( 400, 65 )
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 4 )
text = "Back"

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
margin_top = 95.0
margin_right = 400.0
margin_bottom = 160.0
rect_min_size = Vector2( 400, 65 )
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 4 )
text = "Settings"

[node name="MenuButton" type="Button" parent="VBoxContainer"]
margin_top = 190.0
margin_right = 400.0
margin_bottom = 255.0
rect_min_size = Vector2( 400, 65 )
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 4 )
text = "Quit To Menu"

[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="VBoxContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/MenuButton" to="." method="_on_MenuButton_pressed"]
